# csview

./: .gitignore  Makefile.in  README.adoc  TestEnv.ml  algebra.ml  chart.ml  color.ml  compilConfig.ml.in  config.ml  configure  configure.ac  csview.ml  csview_loadtester.ml  formats.ml  make.common.in  read_csv.ml
static/: csview.js
test_data/: 1.csv  amsterdam_rents.csv
